# VRParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
parser/: CMakeLists.txt
parser/include/: dllmain.h  parser.h
parser/include/utils/: utils.h
parser/material/: ftmatrix.txt
parser/source/: dllmain.cpp
parser/source/Experiment/: VibrationExperiment.cpp  VibrationExperiment.h
parser/source/experiment/: Experiment.cpp  Experiment.h  VibrationExperiment.cpp  VibrationExperiment.h
parser/source/parser/: ParserBase.cpp  ParserBase.h  inspector.cpp  inspector.h
parser/source/parsers/: EegParser.cpp  EegParser.h  EmgParser.cpp  EmgParser.h  FtParser.cpp  FtParser.h  MarkerParser.cpp  MarkerParser.h  PaParser.cpp  PaParser.h  ParserBase.cpp  ParserBase.h  ParserFactory.h
parser/source/utility/: matrix.cpp  matrix.h
parser/source/utils/: EegHeaderWriter.cpp  MarkerParser.cpp  MarkerParser.h  utils.cpp  utils.h
parser/wrappers/matlab/: CMakeLists.txt  Example.m  ReadPlainFloatToArray.m  dllmain.h  mex_wrapper.cpp  mex_wrapper.mexa64  parsermex.mexa64  vrparser.m
parser/wrappers/matlab/functions/: GetMarkers.cpp  VrMexBase.h
parser/wrappers/python/: vrparser.py
test/: CMakeLists.txt
test/source/: main.cpp
