cmake_minimum_required(VERSION 3.12)

project(VRPARSER LANGUAGES CXX)
add_subdirectory(parser)
add_subdirectory(test)
set(TEST_EXECUTABLE vrtest)
set(MEX_NAME vrwrapper)
set(PARSER_LIB parser)
set(PARSER_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/parser/include)
option(ADD_MATLAB "compile matlab mex" OFF)

include_directories(${PARSER_INCLUDE})
aux_source_directory(${PROJECT_SOURCE_DIR}/test/source TEST_DIR)
add_executable(${TEST_EXECUTABLE} ${TEST_DIR})
target_link_libraries(${TEST_EXECUTABLE} PUBLIC ${PARSER_LIB})
if(ADD_MATLAB)
    find_package(Matlab REQUIRED)
    include_directories(${Matlab_INCLUDE_DIRS})
    add_subdirectory(parser/wrappers/matlab)
    target_link_libraries(${TEST_EXECUTABLE} PUBLIC ${MEX_NAME})
endif()