cmake_minimum_required(VERSION 3.12)

project(VRPARSER LANGUAGES CXX)
add_subdirectory(parser)
set(TEST_EXECUTABLE vrtest)
set(MEX_NAME vrwrapper)
set(PARSER_LIB parser)
set(PARSER_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/parser/include)
set(PARSER_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/parser/source)
option(ADD_MATLAB "compile matlab mex" OFF)

include_directories(${PARSER_INCLUDE} ${PARSER_SOURCE})
aux_source_directory(${PROJECT_SOURCE_DIR}/test/source TEST_DIR)
add_executable(${TEST_EXECUTABLE} ${TEST_DIR})
target_link_libraries(${TEST_EXECUTABLE} PRIVATE ${PARSER_LIB})
set_target_properties(${TEST_EXECUTABLE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PARSER_LIB})
if(ADD_MATLAB)
    find_package(Matlab REQUIRED)
    include_directories(${Matlab_INCLUDE_DIRS})
    add_subdirectory(parser/wrappers/matlab)
    #target_link_libraries(${TEST_EXECUTABLE} PUBLIC ${MEX_NAME})
endif()
if(MSVC)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
    set(BUILD_SHARED_LIBS TRUE)
endif()
set_property(TARGET ${PARSER_LIB} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${TEST_EXECUTABLE} PROPERTY CXX_STANDARD 17)
